--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="Eyeshadow.html">Eyeshadow</a></li>
+        
+      </ul>
+    </nav>
+  </header>
 <h1>Hello World</h1>
-<p>This site is created for IT371 Course.</p>
 <p>This site is created for IT371 Course. I'm making a makeup dupe site.</p>
 </body>
 </html>
